# jarvis

./: CONTRIBUTING.md  pyproject.toml
docs/: CHANGELOG.md  DECISIONS.md  ROADMAP.md  STYLE_GUIDE.md  architecture.md
scripts/: test_router.py
src/jarvis/: main.py
src/jarvis/actions/: base.py  open_application.py  open_resource.py  open_website.py  registry.py
src/jarvis/core/: action_manager.py  action_router.py  assistant.py  brain.py  conversation.py  events.py  executor.py  intent.py  planner.py
src/jarvis/files/: candidate_filter.py  finder.py  scorer.py  (+1 more)
tests/: test_desktop_repository.py  test_file_finder.py  test_intent_detector.py  test_knowledge.py  test_nlu.py  test_normalizer.py  test_preprocessor.py  test_query_rewriter.py  test_registry.py  test_scorer.py  test_search_engine.py  test_sentence_parser.py  test_skills.py  test_token_classifier.py  test_tokenizer.py
tests/desktop/: test_desktop_scanner.py
tests/filesystem/: test_file_watcher.py  test_filesystem_updater.py  test_matcher.py  test_ranker.py  test_scanner.py  test_search_engine.py  test_selector.py
tests/intent/: test_command_aliases.py  test_normalized_commands.py  test_open_command.py  test_search_command.py  test_unknown_command.py
tests/nlp/: test_text_normalizer.py
tests/nlu/: test_entity_extractor.py  test_nlu.py  test_open.py
tests/resources/: test_open_file.py  test_repository.py  test_resource_launcher.py
tests/search/: test_candidate_selector.py  test_file_loader.py  test_gimp.py  test_lifecycle_manager.py  test_search_index.py  test_search_index_builder.py
(+125 files in other folders)
