[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Asistente de IA multiplataforma"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]
